bin_PROGRAMS=gtfstool
gtfstool_SOURCES=	main.c \
					gtfs_io.h \
					gtfstool.h \
					gtfs_dump.c \
					gtfs_reader.c \
					gtfstool.c \
					merge_config.c \
					gtfs_split.c \
					gtfs_check.c \
					gtfs_merge.c \
					gtfs_writer.c \
					miniz.c \
					base/aiueo.h \
					base/apiexp.h \
					base/cgiutils.h \
					base/common.h \
					base/csect.h \
					base/csvfile.h \
					base/file.h \
					base/geo.h \
					base/hash.h \
					base/memutil.h \
					base/mtfunc.h \
					base/queue.h \
					base/strutil.h \
					base/syscall.h \
					base/vector.h \
					base/zlibutil.h \
					base/geo.c \
					base/mtfunc.c \
					base/strutil.c \
					base/zlibutil.c \
					base/aiueo.c \
					base/csvfile.c \
					base/hash.c \
					base/queue.c \
					base/syscall.c \
					base/datetime.c \
					base/cgiutils.c \
					base/error.c \
					base/http_header.c \
					base/recv.c \
					base/url.c \
					base/file.c \
					base/memutil.c \
					base/send.c \
					base/vector.c \
					base/sock.c

gtfstool_CFLAGS = -I. 
gtfstool_LDADD = $(LIBS)
